# toy-payments-engine

./: Cargo.toml  README.md  deny.toml  test.csv
src/: account.rs  engine.rs  lib.rs  main.rs  payments.rs  producer.rs
src/engine/: mod.rs  worker.rs
testdata/10k-accounts/: accounts.csv  transactions.csv
testdata/chargeback/: accounts.csv  transactions.csv
testdata/chargeback-after-resolve/: accounts.csv  transactions.csv
testdata/chargeback-another-account/: accounts.csv  transactions.csv
testdata/deposit/: accounts.csv  transactions.csv
testdata/deposit-after-chargeback/: accounts.csv  transactions.csv
testdata/deposit-withdraw/: accounts.csv  transactions.csv
testdata/dispute-another-account/: accounts.csv  transactions.csv
testdata/dispute-withdraw/: accounts.csv  transactions.csv
testdata/double-chargeback/: accounts.csv  transactions.csv
testdata/duplicate-tx-ids/: accounts.csv  transactions.csv
testdata/malformed-transactions/: accounts.csv  transactions.csv
testdata/multiple_disputes/: accounts.csv  transactions.csv
testdata/new-dispute-after-chargeback/: accounts.csv  transactions.csv
testdata/sample-input/: accounts.csv
testdata/unresolved-dispute/: accounts.csv  transactions.csv
testdata/withdraw-after-chargeback/: transactions.csv
testdata/withdraw-held/: accounts.csv  transactions.csv
tests/: golden.rs
