[package]
name = "toy-payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
tokio = {version = "1.18.2", features = ["macros", "rt-multi-thread", "sync"] }
rust_decimal = "1.23.1"
rust_decimal_macros = "1.23.1"
