[package]
name = "toy-payments-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
rust_decimal = "1.23.1"
serde = {version = "1.0.137", features = ["derive"] }
tokio = {version = "1.18.2", features = ["macros", "rt-multi-thread", "sync", "fs"] }

[dev-dependencies]
rust_decimal_macros = "1.23.1"
